# SOP_pmx

./: .gitignore  CMakeLists.txt  README.md  SOP_pmx_common.h  SOP_pmx_reader.C  SOP_pmx_reader.h  pmx_parser.cpp  pmx_parser.h
otls/: build_pmx_character_import.py  pmx_character_import.hda
